# Optimization

./: Cargo.toml  README.md
benches/: bfgs_bench.rs  ncg_bench.rs  steepest_descent_bench.rs  trust_ncg_bench.rs
examples/: bfgs_example.rs  ncg_example.rs  problem_example.rs  steepest_descent_example.rs  trust_ncg_example.rs
src/: bfgs.rs  geometry.rs  lib.rs  line_search.rs  ncg.rs  number_system.rs  problem.rs  solution.rs  steepest_descent.rs  trust_ncg.rs
src/geometry/: hd_quaternion.rs  hd_vector.rs
src/number_system/: dual.rs  dual_math.rs  dual_scalar.rs  dual_scalar_math.rs  hyperdual.rs  hyperdual_math.rs  hyperdual_scalar.rs  hyperdual_scalar_math.rs
tests/: test_bfgs.rs  test_dual.rs  test_dual_math.rs  test_dual_scalar.rs  test_dual_scalar_math.rs  test_hd_quaternion.rs  test_hd_vector.rs  test_hyperdual.rs  test_hyperdual_math.rs  test_hyperdual_scalar.rs  test_hyperdual_scalar_math.rs  test_ncg.rs  test_steepest_descent.rs
