[package]
name = "optimization"
version = "0.2.0"
authors = ["alonso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = {version="0.4", optional=true, default-features=false}


[dev-dependencies]
approx = "0.4"
