[package]
name = "optimization"
version = "1.0.0"
authors = ["alonso"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = {version="0.4", optional=true, default-features=false}
ndarray= "0.15.2"


[dev-dependencies]
approx = "0.4"
criterion = "0.3"


[[bench]]
name = "steepest_descent_bench"
harness = false

[[bench]]
name = "ncg_bench"
harness = false

[[bench]]
name = "bfgs_bench"
harness = false

[[bench]]
name = "trust_ncg_bench"
harness = false
